<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </include>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout"
        tools:context=".ProductDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/camiseta_mockup">

            </ImageView>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@android:style/TextAppearance.Medium">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_detail_cor"
                android:textAppearance="@android:style/TextAppearance.Medium">

            </TextView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_detail_tamanho"
                android:textAppearance="@android:style/TextAppearance.Medium">

            </TextView>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>


            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorAccent"
                android:text="@string/Product_detail_button_comprar"
                android:textColor="@android:color/white">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_detail_descricao"
                android:textAppearance="@android:style/TextAppearance.Medium">

            </TextView>

            <TextView
                android:id="@+id/tv_product_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Small">

            </TextView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>